Fixed navbar spacing

--- a/style.css
+++ b/style.css
@@ -374,10 +374,11 @@ footer {
         max-width: 100vw;
         height: 64px;
         z-index: 1000;
+        padding-left: 24px;
     }
 
     .logo {
-        width: 30%;
+        width: 25%;
     }
 
     .logo h5 {
@@ -391,13 +392,18 @@ footer {
 
     .navlinks {
         display: none;
+        width: 70%;
+    }
+
+    .logo img {
+        padding-left: 0px;
+        justify-self: left;
     }
 
     .navlinksmobile {
         display: flex;
         justify-content: space-between;
-        max-width: 70%;
-        width: 70%;
+        width: 75%;
     }
 
     main {
@@ -415,15 +421,17 @@ footer {
     }
 
     .bannerimg img {
-        max-width: 100vw;
-        object-fit: cover;
-        max-height: auto;
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
     }
     
     .bannerimg {
         padding-left: 0;
         flex: 1 0 100%;
         max-width: 100%;
+        padding-right: 0px;
+        height: 50%;
     }
 
     .bannerinfo {
@@ -436,6 +444,7 @@ footer {
         flex-direction: column;
         margin-left: 16px;
         max-width: 100%;
+        height: 50%;
     }
 
     .bannerinfomobile h1 {
